--- a/articles/2012-03-05-FM/biblioFM.bib
+++ b/articles/2012-03-05-FM/biblioFM.bib
@@ -161,10 +161,8 @@
 
 @inproceedings{AFS12,
   	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent and Soulat, Romain},
-  	booktitle =	{NFM'12},
-  	editor =	{Goodloe, Alwyn and Person, Suzette},
+  	booktitle =	{NFM},
   	note =	{To appear},
-  	pages =	{100-105},
   	publisher =	{Springer},
   	series =	{LNCS},
   	title =	{Enhancing the Inverse Method with State Merging},
@@ -172,8 +170,10 @@
   	volume =	{7226},
   	year =	{2012},
 }
+  	editor =	{Goodloe, Alwyn and Person, Suzette},
   	address =	{Norfolk, Virginia, USA},
   	month =	apr,
+  	pages =	{100-105},
   	series =	{Lecture Notes in Computer Science},
   	booktitle =	{{P}roceedings of the 4th {NASA} {F}ormal {M}ethods {S}ymposium ({NFM}'12)},
 
@@ -199,7 +199,7 @@
 
 @inproceedings{and10,
   	author =	{Andr{\'e}, {\'E}tienne},
-  	booktitle =	{{INFINITY}'10},
+  	booktitle =	{{INFINITY}},
   	pages =	{91--99},
   	series =	{EPTCS},
   	title =	{{IMITATOR~II}: A~Tool for Solving the Good Parameters Problem in Timed Automata},
@@ -393,8 +393,8 @@
 
 @inproceedings{abs01,
 	author = {Annichini, A. and Bouajjani, A. and Sighireanu, M.},
-	title = {TReX: A Tool for Reachability Analysis of Complex Systems},
-	booktitle = {CAV '01},
+	title = {{TReX}: A Tool for Reachability Analysis of Complex Systems},
+	booktitle = {CAV},
 	year = {2001},
 	isbn = {3-540-42345-1},
 	pages = {368--372},
@@ -1217,7 +1217,7 @@ Proceedings of the 9th International Conference on Concurrency Theory
 @inproceedings{cpr08,
 	author = {Cimatti, A. and Palopoli, L. and Ramadian, Y.},
 	title = {Symbolic Computation of Schedulability Regions Using Parametric Timed Automata},
-	booktitle = {RTSS'08},
+	booktitle = {RTSS},
 	year = {2008},
 	isbn = {978-0-7695-3477-0},
 	pages = {80--89},
@@ -1493,20 +1493,21 @@ Proceedings of the 9th International Conference on Concurrency Theory
 
 @inproceedings{FK11,
   	author =	{Fribourg, Laurent and K{\"u}hne, Ulrich},
-  	booktitle =	{{RP}'11},
-  	DOI =	{10.1007/978-3-642-24288-5_17},
-  	editor =	{Delzanno, Giorgio and Potapov, Igor},
+  	booktitle =	{{RP}},
   	pages =	{191--204},
   	publisher =	{Springer},
-  	series =	{Lecture Notes in Computer Science},
+  	series =	{LNCS},
   	title =	{Parametric Verification and Test Coverage for Hybrid Automata Using the Inverse Method},
   	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/FK-RP11.pdf},
   	volume =	{6945},
   	year =	{2011},
 }
+  	DOI =	{10.1007/978-3-642-24288-5_17},
+  	editor =	{Delzanno, Giorgio and Potapov, Igor},
   	month =	sep,
   	address =	{Genova, Italy},
   	booktitle =	{{P}roceedings of the 5th {W}orkshop on {R}eachability {P}roblems in {C}omputational {M}odels ({RP}'11)},
+  	series =	{Lecture Notes in Computer Science},
 
 
 @inproceedings{fkr06,
@@ -2010,7 +2011,7 @@ year={1976}
  
  
 @inproceedings{LPPRC10,
-  author    = {Thi Thieu Hoa Le and
+  author    = {Thi Le and
                Luigi Palopoli and
                Roberto Passerone and
                Yusi Ramadian and
@@ -2021,6 +2022,7 @@ year={1976}
   year      = {2010},
   pages     = {1-8},
 }
+	Thi Thieu Hoa Le 
   ee        = {http://doi.ieeecomputersociety.org/10.1109/ETFA.2010.5641315},
   crossref  = {DBLP:conf/etfa/2010},
   bibsource = {DBLP, http://dblp.uni-trier.de}
@@ -2050,7 +2052,7 @@ year={1976}
 
 @inproceedings{lrst09,
 	AUTHOR = {D. Lime and O. H. Roux and C. Seidner and L.-M. Traonouez},
-	booktitle = {TACAS'09},
+	booktitle = {TACAS},
 	PUBLISHER = {Springer},
 	SERIES = {LNCS},
 	VOLUME = {5505},
@@ -2461,11 +2463,15 @@ constraints, resource sharing.},
 	year = 2010
 }
 
-@unpublished{Soulat12,
+@techreport{Soulat12,
 	author = {Romain Soulat},
 	title = {Scheduling with {IMITATOR}: Some Case Studies},
-  	institution =	{Laboratoire Sp{\'e}cification et V{\'e}rification, ENS Cachan, France},
+  	institution =	{Laboratoire Sp{\'e}cification et V{\'e}rification, France},
+  	note = {Available on \url{www.lsv.ens-cachan.fr/Publis/RAPPORTS_LSV/PDF/rr-lsv-2012-05.pdf}},
+  	number = {LSV-12-05},
+  	type =	{Research Report},
 	month = March,
+  	url =	{http://www.lsv.ens-cachan.fr/Publis/RAPPORTS_LSV/PDF/rr-lsv-2012-05.pdf},
 	year = 2012
 }
 
