--- a/articles/2012-03-05-FM/biblioFM.bib
+++ b/articles/2012-03-05-FM/biblioFM.bib
@@ -1,3 +1,29 @@
+@techreport{fl11,
+	author = {Laurent Fribourg and David Lesens},
+	title = {Projet {ROSCOV}: {R}obuste {O}rdonnancement de {S}yst\`{e}mes de {CO}ntr\^{o}le de {V}ol},
+  	type =	{Project Report (In {F}rench)},
+	month = {December},
+  	note =	{Available at \url{http://www.farman.ens-cachan.fr/ROSCOV.pdf}},
+
+	year = 2011
+}
+
+
+
+@article{bb04,
+  author    = {Enrico Bini and
+               Giorgio C. Buttazzo},
+  title     = {Schedulability Analysis of Periodic Fixed Priority Systems},
+  journal   = {IEEE Trans. Computers},
+  volume    = {53},
+  number    = {11},
+  year      = {2004},
+  pages     = {1462-1473},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/TC.2004.103},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
 @inproceedings{m11,
   author    = {Nicolas Markey},
   title     = {Robustness in real-time systems},
@@ -2470,7 +2496,7 @@ constraints, resource sharing.},
   	note = {Available on \url{www.lsv.ens-cachan.fr/Publis/RAPPORTS_LSV/PDF/rr-lsv-2012-05.pdf}},
   	number = {LSV-12-05},
   	type =	{Research Report},
-	month = March,
+	month = {March},
   	url =	{http://www.lsv.ens-cachan.fr/Publis/RAPPORTS_LSV/PDF/rr-lsv-2012-05.pdf},
 	year = 2012
 }
