--- a/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
+++ b/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
@@ -484,7 +484,7 @@ A number of case studies containing up to 60 timing parameters could be efficien
 Since~\cite{and10}, we extended the input formalism to PTAs equipped with \emph{stopwatches}: clocks can now be stopped for some time while others keep growing.
 Also, we added clock updates: clocks can now be set to arbitrary linear combinations of other clocks, parameters
 and discrete variables.
-%%%We also implemented further algorithms based on~$\IM$, that satisfy weaker properties than the preservation of the trace sets, while outputting larger sets of parameter valuations than~$\IM$ (and possibly non-convex)...
+%%%We also implemented further algorithms based on~$\IM$, that satisfy weaker properties than the preservation of the trace sets, while outputting larger sets of parameter valuations than~$\IM$ (and possibly non-convex)..
 These extensions allow us to consider larger classes of case studies, 
 such as scheduling problems.
 
@@ -515,7 +515,7 @@ A constraint is output in text format; furthermore, the set of traces computed b
 \imitator{} implements in particular the following algorithms:
 \begin{description}
 	\item[Full reachability analysis] Given a PTA, it computes the reachability graph.
-	\item[Inverse method] Given a PTA and a reference parameter valuation~$\pio$, it computes a constraint $K$ on the parameter guaranteeing the same time-abstract behavior as under~$\pio$ (see Fig. \ref{fig:structure}).
+	\item[Inverse method] Given a PTA and a reference parameter valuation~$\pio$, it computes a constraint $K$ on the parameter guaranteeing the same time-abstract behavior as under~$\pio$ (see Figure \ref{fig:structure}).
 % 	\item[Behavioral cartography] Given a model and a bounded parameter domain for each parameter valuation, it computes a set of constraints and their corresponding trace sets.
 \end{description}
 
@@ -547,7 +547,7 @@ The goal is to find a way (``schedule'') to allocate the resources such that all
 % A \emph{job specification} is $J = (m_1,d_1),(m_2,d_2),\cdots, (m_k,d_k)$, stating that in order to accomplish job $J$, one needs to use a machine $m_1$ for $d_1$ time units, then use machine $m_2$ for $d_2$ time units, and so on.
 %
 Let us consider the jobshop problem $\{J_1, J_2\}$ for 2 jobs and 3 machines  with: $J_1 = (m_1,d_1), (m_2,d_2),(m_3,d_3)$ and $J_2 = (m_2,d'_2)$ with $d_1 = 3, d_2=2, d_3=4, d'_2 = 5$.
-There are many possible schedules (two of them are depicted in Fig.~\ref{fig:schedules_maler} in Appendix). 
+There are many possible schedules (two of them are depicted in Figure~\ref{fig:schedules_maler} in Appendix). 
 %
 % The problem is to find a schedule such that the value of the last completed job is minimal.
 % This minimal value is called makespan.
@@ -580,11 +580,11 @@ We then use \imitator{} (instead of a CEGAR-like method
 as in \cite{cpr08}) with $\A \parallel {\cal O}$ as a model input
 and $\pio$ as a valuation input.
 This yields the constraint $\Ko$:  $7 > d'_2 \wedge 3 > d_2 \wedge d'_2 + d_2 \geq 7$.
-(For a geometrical representation of $\Ko$, see Fig.~\ref{fig:geom} of Appendix.)
+(For a geometrical representation of $\Ko$, see Fig.~\ref{fig:geom} of Appendix 1.)
 By the $\IM$ principle, the set of traces (i.e., discrete runs) of
 $\A \parallel {\cal O}$ is always the same,
 for any point $(d_2,d'_2)$ of $\Ko$.
-(This set of traces is depicted under the form of a tree in Fig.~\ref{fig:output} in Appendix.)
+(This set of traces is depicted under the form of a tree in Fig.~\ref{fig:output} in Appendix 1.)
 Since the makespan for $\pio$ is 9,
 we know that some branches of the tree do not contain
 any $\mathit{DEADLINE}$ label (these branches end at node $s73$
@@ -593,9 +593,15 @@ This holds for each point $(d_2,d'_2)$ of $\Ko$.
 In other words, the makespan of the system is  (at most) 9, everywhere in~ $\Ko$. 
 %This gives us a measure of robustness of the system around $\pio$.
 
-Such a robustness analysis, inspired from \cite{cpr08}, 
-has been conducted with \imitator{} 2.5
-on several classes of scheduling problems (see Table~\ref{table:results} in Appendix).
+% Such a robustness analysis, inspired from \cite{cpr08}, 
+% has been conducted with \imitator{} 2.5
+% on several classes of scheduling problems (see Table~\ref{table:results} in Appendix).
+
+Another example of application of \imitator{} 2.5 to a scheduling problem, originating from \cite{bb04}, is given in Appendix 2 (using 
+the cartography method of~\cite{af10}). 
+All case studies and experiments (performed on Ubuntu 11.10 equipped with an Intel Core\,2 2.93\,GiHz processor with 2\,GiB RAM) are described in a research report~\cite{soulat12} (Source code, binaries, all case studies and logs are available in \url{http://www.lsv.ens-cachan.fr/Software/imitator/}).
+
+
 
 %This gives us a quantitative measure of robustness of $\pio$,
 %seen as a solution for the value 9 of makespan.
@@ -615,7 +621,7 @@ on several classes of scheduling problems (see Table~\ref{table:results} in Appe
 %We apply \imitator{} to a network of PTAs with stopwatches corresponding to the example of~\cite{AM02} (with only two parameters $d_2$ and $d'_2$).
 % 
 % \imitator{} outputs:
-%  $ 7 > d'_2 \wedge 3 > d_2 \wedge d'_2 + d_2 \geq 7$.\footnote{There three couples of integer values that satisfy $K$: $(1,6)$, $(2,5)$, $(2,6)$....} This gives us a quantitative
+%  $ 7 > d'_2 \wedge 3 > d_2 \wedge d'_2 + d_2 \geq 7$.\footnote{There three couples of integer values that satisfy $K$: $(1,6)$, $(2,5)$, $(2,6)$...} This gives us a quantitative
 %  measure of robustness for the input valuation $\pi_0 = \{d_2=2, d'_2 = 5\}$.
 % 
 % \begin{enumerate}
@@ -630,12 +636,12 @@ on several classes of scheduling problems (see Table~\ref{table:results} in Appe
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Related Work}
+\section{Comparison with Related Work}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %One of the first powerful model checkers for analyzing PTAs is \hytech{}~\cite{hhw97}.
-%Unfortunately, it can hardly verify even medium sized examples due to exact arithmetics with limited precision and static composition of automata..
+%Unfortunately, it can hardly verify even medium sized examples due to exact arithmetics with limited precision and static composition of automata.
 %%, quickly leading to memory overflows.
 %%%Since, \trex{}~\cite{abs01} has been able to perform parameter synthesis%(see, e.g.,~\cite{cs01})
 %, and 
@@ -663,23 +669,23 @@ that the two methods are complementary.
 The problem of finding the schedulability region was attacked in analytic terms
 in \cite{bb04}. 
 The size of our examples is modest, compared to those treated by such analytic methods.
-However, in many scheduling problems,
+However, in many schedulability problems,
 no analytic solution exists (see, e.g.,~\cite{SGL97}), 
-while exhaustive simulation is exponential
+and exhaustive simulation is exponential
 in the number of jobs. In such cases, symbolic methods as ours and those
 of \cite{cpr08,LPPRC10}  are useful to treat
 critical real-life examples of small size.
-(We are thus involved in a project~\cite{fl11} with an industrial partner 
-with first interesting results.)
+We are thus involved in a project~\cite{fl11} with an industrial partner 
+with first interesting results.
 
 % A graphical user interface for the input model is currently under construction, based on a generic platform. \commentaire{utile ?!}
 
-\subsubsection*{Future Work}
-In~\cite{FK11}, $\IM$ has been extended to {\em hybrid} automata, and a prototype 
+%\subsubsection*{Future Work}
+%In~\cite{FK11}, $\IM$ has been extended to {\em hybrid} automata, and a prototype 
 %based on \imitator{} 
-has been implemented.
-Bridging the gap between that %experimental 
-prototype with high expressiveness but moderate performances, and the optimized \imitator{} 2.5 dedicated to PTAs with stopwatches is the subject of ongoing work.
+%has been implemented.
+%Bridging the gap between that %experimental 
+%prototype with high expressiveness but moderate performances, and the optimized \imitator{} 2.5 dedicated to PTAs with stopwatches is the subject of ongoing work.
 
 
 
@@ -689,7 +695,7 @@ prototype with high expressiveness but moderate performances, and the optimized 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{abbrv} % alpha plain
-\bibliography{biblioFM}
+\bibliography{biblio}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -699,7 +705,7 @@ prototype with high expressiveness but moderate performances, and the optimized 
 
 \appendix
 
-\section*{Appendix}
+\section*{Appendix 1: Job-shop Case Case Study from \cite{AM02}}
 
 %%%%\subsection*{Visual Examples of Schedules}\label{app:schedules}
 
@@ -711,17 +717,15 @@ prototype with high expressiveness but moderate performances, and the optimized 
 
 \begin{figure}[ht!]
 	\centering
-		\includegraphics[width=7cm]{scheduling.jpg}
+ 		\includegraphics[width=7cm]{./figures/scheduling.jpg}
 	\caption{Schedules for jobshop example (with makespan 9 (left) and 11 (right)) \cite{AM02}}
 	\label{fig:schedules_maler}
 \end{figure}
-
-%%%%%%
 %%%\subsection*{Geometrical Representation of $\Ko$}\label{app:geom}
 
 \begin{figure}[ht!]
 	\centering
-		\includegraphics[width=3cm]{geom.jpg}
+ 		\includegraphics[width=3cm]{./figures/geom.jpg}
 	\caption{Geometrical representation of $\Ko$ around $\pio: (2,5)$}
 	\label{fig:geom}
 \end{figure}
@@ -730,12 +734,15 @@ prototype with high expressiveness but moderate performances, and the optimized 
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 \begin{figure}[ht!]
 	\centering
-		\includegraphics[width=10cm]{traceset.jpg}
+ 		\includegraphics[width=10cm]{./figures/traceset.jpg}
 % 	\commentaire{TO DO}
 	\caption{Graphics of the trace set output by \imitator{} on the jobshop example}
 	\label{fig:output}
 \end{figure}
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
+%%%%%%
+
+
 
 %\commentaire{commenter figure: maler, merging; seul l'etat du bas respecte}
 %\commentaire{
@@ -745,94 +752,123 @@ prototype with high expressiveness but moderate performances, and the optimized 
 %ex de TA en appendix, avec schema et code IMITATOR
 %}
 
+\section*{Appendix 2: Rate Monotonic Case Study from \cite{bb04}}
+\label{app:carto}
+We present here what we can obtain from \imitator{} 2.5 with the Behavioral Cartography (BC) output. By iterating $\IM$ over all the integers points inside a finite rectangle $V_0$ in the parametric space,
+ one is able to decompose
+(most of) the parametric space included into $V_0$ into behavioral tiles
+\footnote{Actually, one can take a finer discretization step to ensure a better coverability of~$V_0$}.
 
-\subsection*{Summary of Experiments}
+For a given tile, we ensure that for every valuation of the parameters in this tile, the behavior of $\A$ is the same, therefore, we only
+have to test the schedulability of a single point for each tile to ensure the schedulability on the whole tile. We apply this method on a ``Rate Monotonic''
+ example of \cite{bb04} (Section~III).
 
-%\commentaire{ajouter un beau tableau avec des contraintes, et un lien vers un rapport d'etudes de cas (+ site Web)}
+There are three periodic tasks $\tau_1, \tau_2$ and $\tau_3$ with periods of $T_1 = 3, \ T_2 = 8$ and $T_3 = 20$ and deadlines of $D_1 = 3, \ D_2 = 8$ and $D_3 = 20$. We are interested in finding the set
+ of computation times of each task such that the system is schedulable. The interested reader can find the full details in \cite{bb04}.
 
-\begin{table}[!ht]
+We set $V_0$ as $C_1 \in [0,3]$, $C_2 \in [0,8]$ and $C_3 = 0$, where $C_i$ is the computational time of $\tau_i$. The system is unschedulable if there exists a task $\tau_i$ such that $C_i > T_i$. 
+% We recall the algorithm for BC, we first pick an integer point $\pi_k$ that does not belong to any tile already computed and we synthesize $\IM(\A,\pi_k)$ which will be a new tile. We iterate this process 
+% until no integer point remains uncover (since $V_0$ only contains a finite number of integer points, we know that GC will terminate in a finite number of iterations).
+BC outputs the set of tiles and we check for one point of each tile wether the system is schedulable or not.
+The result for this example is given in Figure \ref{fig:carto} for this $V_0$ with a discretization step of $0.2$.
+
+\begin{figure}[!ht]
  \centering
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
-\hline
- Case study             & $|\mathcal{A}|$& $|X|$ & $|P|$ & $|S|$        & $|T|$         & $n$   &
-$|K|$ & t               \\
-\hline
-jobshop $2\times 3$ \cite{AM02}               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
-& 288.2/450.4   \\
-\hline
-jobshop $2\times 5$               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
-& 288.2/450.4   \\
-\hline
-jobshop $3\times 5$               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
-& 288.2/450.4   \\
-\hline
-cpr08 \cite{cpr08}               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
-& 288.2/450.4   \\
-\hline
-hppr10 \cite{LPPRC10}             & 3 & 4 &  9& 60/103    & 103/686               & 10/10 & 7/5 &
-2.10/11.7\\
-\hline
-Task chains \cite{SGL97} & 8 & 15 & 18 & 215/1364 & 264/1363 & 15/15 &
-17/17 & 85.3/270.6\\
-\hline
-%Astrium (RM) \cite{soulat12}       & 5 & 7         & 10    & 63/63         & 62/62         & 32/32 &
-%12/12 & 1.10/0.93       \\
-%\hline
-RM 1            & 5 & 7         & 10    & 205/805       & 225/837       & 40/40 & 11/11 & 15.6/28.5  \\
-\hline
-RM 2            & 5 & 7         & 10    & 208/1174      & 228/1269      & 42/42 & 12/12 & 10.7/41.0  \\
-\hline
-RM 3            & 5 & 7         & 10    & 49/82         & 51/81         & 15/15 & 12/12 & 1.03/1.75  \\
-\hline
-%Astrium (EDF)   & 5 & 10        & 13    & 63/63         & 62/62         & 32/32 & 13/13 &
-%2.42/2.30       \\
-%\hline
-EDF 1           & 5 & 10        & 13    & 76/415        & 91/454 & 31/31        & 20/20 & 66.1/288.2  \\
-\hline
-EDF 2           & 5 & 10        & 13    & 254/642       & 326/817       & 47/47 & 12/12 & 9.9/23.2  \\
-\hline
-EDF 3           & 5 & 10&  13   & 31/43         & 33/45         & 9/9   & 13/14 & 1.09/1.57  \\
-\hline
-\end{tabular}
-\caption{Experimental results with \imitator{} on scheduling examples}
- \label{table:results}
-\end{table}
+ \includegraphics[scale = 0.5]{./figures/C1-C2.png}
+ \caption{Cartography output by \imitator{} 2.5 (in green the system is schedulable; in red, unschedulable)}
+ \label{fig:carto}
+\end{figure}
+Note that the full parametric space is covered after only 20 applications of $\IM$. This corresponds to the bottom left ``triangle'' of Fig. 1 (a) in \cite{bb04}.
 
 
+% 
+% \subsection*{Summary of Experiments}
+% 
+% %\commentaire{ajouter un beau tableau avec des contraintes, et un lien vers un rapport d'etudes de cas (+ site Web)}
+% 
+% \begin{table}[!ht]
+%  \centering
+% \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+% \hline
+%  Case study             & $|\mathcal{A}|$& $|X|$ & $|P|$ & $|S|$        & $|T|$         & $n$   &
+% $|K|$ & t               \\
+% \hline
+% jobshop $2\times 3$ \cite{AM02}               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+% & 288.2/450.4   \\
+% \hline
+% jobshop $2\times 5$               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+% & 288.2/450.4   \\
+% \hline
+% jobshop $3\times 5$               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+% & 288.2/450.4   \\
+% \hline
+% cpr08 \cite{cpr08}               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+% & 288.2/450.4   \\
+% \hline
+% hppr10 \cite{LPPRC10}             & 3 & 4 &  9& 60/103    & 103/686               & 10/10 & 7/5 &
+% 2.10/11.7\\
+% \hline
+% Task chains \cite{SGL97} & 8 & 15 & 18 & 215/1364 & 264/1363 & 15/15 &
+% 17/17 & 85.3/270.6\\
+% \hline
+% %Astrium (RM) \cite{soulat12}       & 5 & 7         & 10    & 63/63         & 62/62         & 32/32 &
+% %12/12 & 1.10/0.93       \\
+% %\hline
+% RM 1            & 5 & 7         & 10    & 205/805       & 225/837       & 40/40 & 11/11 & 15.6/28.5  \\
+% \hline
+% RM 2            & 5 & 7         & 10    & 208/1174      & 228/1269      & 42/42 & 12/12 & 10.7/41.0  \\
+% \hline
+% RM 3            & 5 & 7         & 10    & 49/82         & 51/81         & 15/15 & 12/12 & 1.03/1.75  \\
+% \hline
+% %Astrium (EDF)   & 5 & 10        & 13    & 63/63         & 62/62         & 32/32 & 13/13 &
+% %2.42/2.30       \\
+% %\hline
+% EDF 1           & 5 & 10        & 13    & 76/415        & 91/454 & 31/31        & 20/20 & 66.1/288.2  \\
+% \hline
+% EDF 2           & 5 & 10        & 13    & 254/642       & 326/817       & 47/47 & 12/12 & 9.9/23.2  \\
+% \hline
+% EDF 3           & 5 & 10&  13   & 31/43         & 33/45         & 9/9   & 13/14 & 1.09/1.57  \\
+% \hline
+% \end{tabular}
+% \caption{Experimental results with \imitator{} on scheduling examples}
+%  \label{table:results}
+% \end{table}
+% 
+% 
+% 
+% \commentaire{
+% quand il y a une variablité du computation time (entre BCET et WCET), pas de méthode exacte analytique --> interet des methodes symboliques (model checking) d'exploration exhaustive basee sur TA (et donc interet de IM puisque generalisation! si on etait schedulable, on lest encore avec IM)
+% }
+% 
+% Astrium, RMs and EDFs case studies are composed of three cyclic tasks that need to be performed on a single machine.
+% 	Therefore, the machine has to choose which task is active when several tasks are requiring computation.
+% 	This is done in two ways, either with a Fixed Priority (RM) scheduler or an Earliest Deadline First scheduler (EDF).
+% 	These three case studies are being studied in the framework of the joint project Roscov between LSV and Astrium.
+% 	
+% cpr08~\cite{cpr08} and HPPR10~\cite{LPPRC10} are two-cyclic-tasks problem with an EDF scheduler.
+% 	TaskChain~\cite{SGL97} does not use cyclic tasks but instead has a 4 task chain and a concurrent 3 task chain.
+% 		Each task in a chain cannot start until the previous one has not terminated.
+% 		Each task in each chain has a given fixed priority.
+% 		A scheduler assigns which task has the computational time with a RM policy.
+% 
+% For every RM scheduling example, the parameters are the offsets of the tasks, their Wost Case Execution Time (WCET), their periods and a deadline to achieve a given goal (modeled by an extra automaton).
+% 	For every EDF scheduling example, the parameters are the offsets of the tasks, their WCET, their periods, a deadline to achieve each task and a deadline to achieve a given goal (modeled by an extra automaton).
+% 
+% 
+% 
+% Experiments were performed on Ubuntu 11.10 equipped with an Intel Core\,2 2.93\,GiHz processor with 2\,GiB RAM.
+% Source code, binaries, all case studies and logs are available in
+% \url{http://www.lsv.ens-cachan.fr/Software/imitator/}.
+% 
+% All case studies and experiments are also described in a research report~\cite{soulat12}.
+% 
+% 
+% %\subsection*{Example of Trace Set}
+% 
+% %\commentaire{ajouter un trace set en mode fancy}
+% 
+% %\subsection*{An Example of Model}
+% 
+% %\commentaire{ajouter un modele en entree avec sa representation graphique (pour decrire la syntaxe)}
 
-\commentaire{
-quand il y a une variablité du computation time (entre BCET et WCET), pas de méthode exacte analytique --> interet des methodes symboliques (model checking) d'exploration exhaustive basee sur TA (et donc interet de IM puisque generalisation! si on etait schedulable, on lest encore avec IM)
-}
-
-Astrium, RMs and EDFs case studies are composed of three cyclic tasks that need to be performed on a single machine.
-	Therefore, the machine has to choose which task is active when several tasks are requiring computation.
-	This is done in two ways, either with a Fixed Priority (RM) scheduler or an Earliest Deadline First scheduler (EDF).
-	These three case studies are being studied in the framework of the joint project Roscov between LSV and Astrium.
-	
-cpr08~\cite{cpr08} and HPPR10~\cite{LPPRC10} are two-cyclic-tasks problem with an EDF scheduler.
-	TaskChain~\cite{SGL97} does not use cyclic tasks but instead has a 4 task chain and a concurrent 3 task chain.
-		Each task in a chain cannot start until the previous one has not terminated.
-		Each task in each chain has a given fixed priority.
-		A scheduler assigns which task has the computational time with a RM policy.
-
-For every RM scheduling example, the parameters are the offsets of the tasks, their Wost Case Execution Time (WCET), their periods and a deadline to achieve a given goal (modeled by an extra automaton).
-	For every EDF scheduling example, the parameters are the offsets of the tasks, their WCET, their periods, a deadline to achieve each task and a deadline to achieve a given goal (modeled by an extra automaton).
-
-
-
-Experiments were performed on Ubuntu 11.10 equipped with an Intel Core\,2 2.93\,GiHz processor with 2\,GiB RAM.
-Source code, binaries, all case studies and logs are available in
-\url{http://www.lsv.ens-cachan.fr/Software/imitator/}.
-
-All case studies and experiments are also described in a research report~\cite{soulat12}.
-
-
-%\subsection*{Example of Trace Set}
-
-%\commentaire{ajouter un trace set en mode fancy}
-
-%\subsection*{An Example of Model}
-
-%\commentaire{ajouter un modele en entree avec sa representation graphique (pour decrire la syntaxe)}
-
-\end{document}          
+\end{document}     
