--- a/articles/2012-03-05-FM/biblio.bib
+++ b/articles/2012-03-05-FM/biblio.bib
@@ -7,11 +7,11 @@ Télécharger en tant que fichier
 
 @techreport{fl11,
         author = {Laurent Fribourg and David Lesens},
-        title = {Projet {ROSCOV}: {R}obuste {O}rdonnancement de {S}yst\`{e}mes de
-{CO}ntr\^{o}le de {V}ol},
+        title = {Projet {ROSCOV}: Robuste Ordonnancement de Syst\`{e}mes de
+COntr\^{o}le de Vol},
           type =        {Project Report (In {F}rench)},
         month = {December},
-          note =        {Available at \url{http://www.farman.ens-cachan.fr/ROSCOV.pdf}},
+          note =        {Available at \url{www.farman.ens-cachan.fr/ROSCOV.pdf}},
 
         year = 2011
 }
@@ -128,7 +128,7 @@ d'automatisation en r{\'e}seau},
 @inproceedings{af10,
           author =        {Andr{\'e}, {\'E}. and Fribourg, L.},
           title =        {Behavioral Cartography of Timed Automata},
-          booktitle =        {{RP}'10},
+          booktitle =        {{RP}},
           pages =        {76-90},
           publisher =        {Springer},
           series =        {LNCS},
