remis figure qui compile pas
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@416 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
+++ b/articles/2012-03-05-FM/2012-03-12-IMITATOR-FM.tex
@@ -774,7 +774,7 @@ The result for this example is given in Figure \ref{fig:carto} for this $V_0$ wi
 
 \begin{figure}[!ht]
 	\centering
-% 	\includegraphics[scale = 0.5]{./figures/C1-C2.png}
+	\includegraphics[scale = 0.5]{./figures/C1-C2.png}
 	\caption{Cartography output by \imitator{} 2.5 (in green the system is schedulable; in red, unschedulable)}
 	\label{fig:carto}
 \end{figure}
